# nlip-app

./: .gitignore  LICENSE  README.md  key.jks  log_ref.md  nlip.openapi.json  pubspec.yaml
android/: build.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: baseline_cloud_download.xml  baseline_cloud_upload.xml  button_background.xml  button_close_background.xml  card_gradient_background.xml  rounded_bg_focused.xml  rounded_bg_selector.xml  tile.xml  tile_white.xml
android/app/src/main/res/layout/: activity_floating_window.xml  item_floating.xml
android/app/src/main/res/values-zh/: strings.xml
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: api_service.dart  hotkey_utils.dart  main.dart  window_utils.dart
lib/platform/: desktop_app.dart  mobile_app.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: nlip_api.dart  nlip_api.freezed.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: error.rs  frb_generated.rs  lib.rs  linux.rs  log_utils.rs  macos.rs  nlip_utils.rs  windows.rs
rust/src/api/: mod.rs  nlip_api.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_nlip_app.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_nlip_app.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  flutter_window.cpp  main.cpp
(+13 files in other folders)
