[package]
name = "rust_lib_nlip_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.11"

[dependencies]
log = "0.4"
flutter_rust_bridge = "=2.8.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
